- Removed the regular expression check for IP addresses since QUrl/KUrl now   correctly parse almost all short url addresses. - Create the remaining QRegExp checks once instead of on demand. - Use KUser for username name and directory shortcuts, e.g. ~/, resolution. - Percent-encoded extra '@' within a URL's username component (Workaround). - Added unit tests for IPv6 URLs and escaping of '@' in usernames.

BUG: 69326
BUG: 118413
FIXED-IN: 4.6.5
REVIEW: 101576

(cherry picked from commit d1101e6dae09c73bbf319061fc229da936c4e4bf)